<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/btn_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/close_button"
        app:srcCompat="@android:drawable/btn_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/logoContentDescription"
            android:elevation="8dp"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/custom_dialog_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/qr_code"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

    </LinearLayout>

</RelativeLayout>