<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/close_button"
        app:srcCompat="@android:drawable/btn_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/logoContentDescription"
            android:elevation="8dp"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/about_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/custom_dialog_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="294dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center_horizontal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/about_app"
                android:textColor="#E8F5E9" />

        </ScrollView>

    </LinearLayout>

</RelativeLayout>