<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:backgroundTint="@color/islander_silver"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".qr_generator">

    <Button
        android:id="@+id/buttonPolicies"
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:background="@drawable/button_style"
        android:text="@string/policies"
        android:textColor="@color/islander_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonQRCode"
        app:layout_constraintTop_toBottomOf="@+id/qrImage"
        app:layout_constraintVertical_bias="0.259" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:background="@drawable/button_style"
        android:text="@string/about"
        android:textColor="@color/islander_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loadPolicyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPolicies" />

    <Button
        android:id="@+id/buttonQRCode"
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:background="@drawable/button_style"
        android:text="@string/qr_status_code"
        android:textColor="@color/islander_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPolicies"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrImage"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/loadPolicyButton"
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:background="@drawable/button_style"
        android:text="@string/load_policy"
        android:textColor="@color/islander_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAbout"
        app:layout_constraintTop_toBottomOf="@+id/buttonQRCode" />

    <ImageView
        android:id="@+id/qrImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logoContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>