<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:backgroundTint="@color/islander_silver"
    android:orientation="vertical"
    android:backgroundTintMode="multiply"
    android:padding="12dp"
    tools:context=".load_policy">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="25dp" />

    <TextView
        android:id="@+id/warningTextView"
        android:text="@string/warning"
        android:visibility="invisible"
        style="@style/load_warning" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/returnButton"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_style"
            android:text="@string/cancel_button"
            android:textColor="@color/islander_blue" />

        <Button
            android:id="@+id/loadButton"
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_style"
            android:text="@string/load_policy"
            android:textColor="@color/islander_blue" />
    </RelativeLayout>

</RelativeLayout>