<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="134dp"
        android:layout_height="180dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/logoContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="256dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/MainTitle"
        android:textColor="@color/pantone_grey"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="174dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_style"
        android:text="@string/registerButton"
        android:textColor="@color/islander_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>